# PDF-Conversion

./: json_to_excel.py  main.py  output.xlsx  result.csv  result.json
FastAPI/app/: pyproject.toml
FastAPI/app/app/: main.py
FastAPI/app/app/uploads/: main.py
FastAPI/product_service/: pyproject.toml
FastAPI/product_service/product_service/: crud.py  database.py  main.py  models.py  schemas.py
csv to json/: .gitignore  main.py
output/: structuredData.json
output/tables/: fileoutpart0.xlsx
