[tool.poetry]
name = "product-service"
version = "0.1.0"
description = ""
authors = ["rimsha_shehzadi <rimshashehzadi79@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.114.2"
uvicorn = "^0.30.6"
sqlmodel = "^0.0.22"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
